TASK:moved the canny edge detection to a separate file
needs further refactoring to use
low threshold
high threshold
edge tracking loop count

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 project(canny)
 find_package(OpenCV REQUIRED)
-add_executable(canny main.cpp)
+add_executable(canny main.cpp custom_canny.cpp custom_canny.h)
 target_link_libraries(canny ${OpenCV_LIBS})
